--- a/aalalala - copia.html
+++ b/aalalala - copia.html
@@ -81,9 +81,9 @@
                 <div class="row g-4">
                   <div class="col-md">
                     <div class="text-light">
-                      <div class="card-body">
+                      <div class="card-body mb-5">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class="d-block w-75 mt-0" alt="...">
+                          <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-75 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="text-light">
                       <div class="card-body">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="d-block w-75 mt-0" alt="...">
+                          <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="w-75 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
@@ -133,7 +133,7 @@
                     <div class="text-light">
                       <div class="card-body">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-10-svgrepo-com.svg" class="d-block w-75 mt-0" alt="...">
+                          <img src="img/cactus-furniture-nature-10-svgrepo-com.svg" class="w-75 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
