--- a/home.html
+++ b/home.html
@@ -18,9 +18,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light ">
-
     <div class="container-fluid p-3 py-0">
-
       <div class="d-flex flex-column">
         <li class="nav-item ">
           <a class="navbar-brand mt-0" href="#">
@@ -33,27 +31,43 @@
         <li class="nav-item"><br> </li>
       </div>
 
-
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
           <li class="nav-item btn">
             <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
             <a class="nav-link" href="catalogo.html">Catalogo</a>
           </li>
-
           </li>
           <div class="d-flex flex-column">
-            <li class="nav-item btn ">
-              <a class="nav-link" href="#">Ingreso Usuarios</a>
-            </li>
             <li class="nav-item btn btn2">
               <a class="nav-link" href="registro.html">Registrate </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle mx-1 p-1 btn"  href="#" id="navbarDropleft" role="button" data-bs-toggle="dropdown" 
+              aria-expanded="false" style="width:135px">
+                Ingresar
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <div class="col-md-11 p-1">
+                  <input type="text" name="txtCorreo" 
+                  class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
+                  maxlength="50" placeholder="Id. Usuario:" 
+                  title="Ingrese su correo electronico/mail">
+              </div>
+              <div class="col-md-11 p-1">
+                <input type="text" name="txtCorreo" 
+                class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
+                maxlength="50" placeholder="Contraseña:" 
+                title="Ingrese su correo electronico/mail">
+              </div>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item btn offset-2" style="width:90px" href="#">Entrar</a></li>
+              </ul>
             </li>
           </div>
         </ul>
@@ -61,6 +75,8 @@
     </div>
   </nav>
 
+<!-- #############################################  CAROUSEL ################################################# -->
+  
   <section class="text-light">
     <div class="container ">
       <div class="d-sm-flex align-items-center">
@@ -75,7 +91,6 @@
                 aria-label="Slide 3"></button>
             </div>
 
-
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
                 <div class="row g-4">
@@ -83,7 +98,7 @@
                     <div class="text-light">
                       <div class="card-body mb-5">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-75 mx-auto my-auto d-block" alt="...">
+                          <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-50 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
@@ -93,10 +108,10 @@
                       <div class="card-body" style="width: auto">
                         <div class="h1 mb-3">
                         </div>
-                        <h1>Cactus 1</h1>
+                        <h1>Sahuaro</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores optio, nulla reiciendis
                           veniam quisquam voluptatum est illo delectus ducimus ullam?</p> <br>
-                        <a href="#" class="btn d-block p-2 m-5 mx-auto">Mas informacion </a>
+                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
@@ -109,7 +124,7 @@
                     <div class="text-light">
                       <div class="card-body">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="w-75 mx-auto my-auto d-block" alt="...">
+                          <img src="img/plant-svgrepo-com (1).svg" class="w-50 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
@@ -119,9 +134,9 @@
                       <div class="card-body" style="width: auto">
                         <div class="h1 mb-3">
                         </div>
-                        <h1>Cactus 2</h1>
+                        <h1>astrophytum myriostigma </h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p> <br>
-                        <a href="#" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
+                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
@@ -133,7 +148,7 @@
                     <div class="text-light">
                       <div class="card-body">
                         <div class="h1 mb-3">
-                          <img src="img/cactus-furniture-nature-10-svgrepo-com.svg" class="w-75 mx-auto my-auto d-block" alt="...">
+                          <img src="img/plant-svgrepo-com (2).svg" class="w-50 mx-auto my-auto d-block" alt="...">
                         </div>
                       </div>
                     </div>
@@ -143,11 +158,11 @@
                       <div class="card-body" style="width: auto">
                         <div class="h1 mb-3">
                         </div>
-                        <h1>Cactus 3</h1>
+                        <h1>Gymnocalycium </h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, doloribus ullam quas quis
                           repellendus provident in neque nam id mollitia hic odit consectetur adipisci doloremque
                           ratione perspiciatis, dignissimos veritatis. Voluptatum.</p> <br>
-                        <a href="#" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
+                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
