--- a/producto.html
+++ b/producto.html
@@ -86,15 +86,14 @@
         <div class="card-body mb-5 ">
           <div class=" h1 mb-3 ">
             <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-50 mx-auto my-auto d-block" 
-            style="border: 5px solid rgba(80, 111, 32, 0.51); background-color: rgba(43, 67, 19, 0.132);" alt="...">
+            style="border: 1px solid rgba(0, 0, 0, 0.51); background-color: rgba(43, 67, 19, 0.132); border-radius: 2%;" alt="...">
             <div class="text-center">
-              <a href="#" class="btn" style="width:50% ;border-color: black;">Pedir</a>
+              <a href="venta.html" class="btn tipo1" style="width:50% ;border-color: black; color:black">Pedir</a>
             </div>
           </div>
         </div>
       </div>
-      
-      <button>c:</button>
+      <button onclick="window.location.href='https://www.youtube.com/watch?v=klfT41uZniI';" style="background-color:rgba(128, 255, 0, 0.134)"> c:</button>
     </div>
     <div class="col-md">
       <div class="text-dark">
