--- a/registro.html
+++ b/registro.html
@@ -23,7 +23,7 @@
 
       <div class="d-flex flex-column">
         <li class="nav-item ">
-          <a class="navbar-brand mt-0" href="aalalala - copia.html">
+          <a class="navbar-brand mt-0" href="home.html">
             <img
               src="https://lh3.googleusercontent.com/pw/AM-JKLXFP6wUh98HioMYyR6tVMkpSFCbzKOQJGF2TsQFa9bBKjK-PeEaNNZAfQ9zMk2yG7YVQJiT-kAJYRwDq-WrkCvwaihTf3Y_3HKItMIQ6Y1DZbvT9BopYWuEj9Oif2bMF4A_cOFBr8YpXcTKt4mv_H4Q=s64-no?authuser=0"
               width="50" height="50" alt="">
@@ -32,7 +32,6 @@
         </li>
         <li class="nav-item"><br> </li>
       </div>
-
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
