--- a/catalogo.html
+++ b/catalogo.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/472d8f83ca.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
   <title>GreenPlants</title>
 
@@ -18,90 +18,115 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="aalalala - copia.html">
-        <img
-          src="https://lh3.googleusercontent.com/pw/AM-JKLXFP6wUh98HioMYyR6tVMkpSFCbzKOQJGF2TsQFa9bBKjK-PeEaNNZAfQ9zMk2yG7YVQJiT-kAJYRwDq-WrkCvwaihTf3Y_3HKItMIQ6Y1DZbvT9BopYWuEj9Oif2bMF4A_cOFBr8YpXcTKt4mv_H4Q=s64-no?authuser=0"
-          width="40" height="40" alt="">
-        GreenPlants
-      </a>
+
+    <div class="container-fluid p-3 py-0">
+
+      <div class="d-flex flex-column">
+        <li class="nav-item ">
+          <a class="navbar-brand mt-0" href="home.html">
+            <img
+              src="https://lh3.googleusercontent.com/pw/AM-JKLXFP6wUh98HioMYyR6tVMkpSFCbzKOQJGF2TsQFa9bBKjK-PeEaNNZAfQ9zMk2yG7YVQJiT-kAJYRwDq-WrkCvwaihTf3Y_3HKItMIQ6Y1DZbvT9BopYWuEj9Oif2bMF4A_cOFBr8YpXcTKt4mv_H4Q=s64-no?authuser=0"
+              width="50" height="50" alt="">
+            GreenPlants
+          </a>
+        </li>
+        <li class="nav-item"><br> </li>
+      </div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
-
-          <li class="nav-item btn btn2">
-            <a class="nav-link" href="registro.html">Registrate </a>
+          <li class="nav-item">
+          <li class="nav-item btn">
+            <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
+            <a class="nav-link" href="catalogo.html">Catalogo</a>
           </li>
-          <li class="nav-item btn ">
-            <a class="nav-link" href="#">Ingreso Usuarios</a>
           </li>
-
+          <div class="d-flex flex-column">
+            <li class="nav-item btn tipo1
+            ">
+              <a class="nav-link" href="registro.html">Registrate </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle mx-1 p-1 btn"  href="#" id="navbarDropleft" role="button" data-bs-toggle="dropdown" 
+              aria-expanded="false" style="width:135px">
+                Ingresar
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <div class="col-md-11 p-1">
+                  <input type="text" name="txtCorreo" 
+                  class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
+                  maxlength="50" placeholder="Id. Usuario:" 
+                  title="Ingrese su correo electronico/mail">
+              </div>
+              <div class="col-md-11 p-1">
+                <input type="text" name="txtCorreo" 
+                class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
+                maxlength="50" placeholder="Contraseña:" 
+                title="Ingrese su correo electronico/mail">
+              </div>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item btn offset-2" style="width:90px" href="#">Entrar</a></li>
+              </ul>
+            </li>
+          </div>
         </ul>
       </div>
     </div>
   </nav>
 
 
-
-
     <section class="p-5">
         <div class="container py-0 p-5 mb-4">
             <div class="row text-center g-4">
 
-
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-laptop"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-10-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-primary">etc etc</a>
-                        </div>
+              <div class="col-md">
+                <div class="card tipo1
+                " href="producto.html">
+                    <div class="card-body text-center">
+                        <h3 class="card-title mb-3">Sahuaro</h3>
+                        <div class="h1 mb-3 ">
+                            <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                          </div>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            At veniam voluptas provident rem sequi? Ab?</p>
+                            <a href="venta.html" class="btn">Comprar</a>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-person-square"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-dark">etc etc</a>
+            <div class="col-md">
+              <div class="card tipo1
+              ">
+                  <div class="card-body text-center">
+                      <h3 class="card-title mb-3">Gymnocalycium</h3>
+                      <div class="h1 mb-3 ">
+                          <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 " alt="...">
                         </div>
-                    </div>
-                </div>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                          At veniam voluptas provident rem sequi? Ab?</p>
+                          <a href="venta.html" class="btn">Comprar</a>
+                  </div>
+              </div>
+          </div>
 
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-person-square"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-14-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-dark">etc etc</a>
-                        </div>
-                    </div>
+          <div class="col-md">
+            <div class="card tipo1
+            ">
+                <div class="card-body text-center">
+                    <h3 class="card-title mb-3">Ficus Lyrata</h3>
+                    <div class="h1 mb-3 ">
+                        <img src="img/plant-svgrepo-com (7).svg" class="text-center w-50 mt-0 " alt="...">
+                      </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        At veniam voluptas provident rem sequi? Ab?</p>
+                        <a href="venta.html" class="btn">Comprar</a>
                 </div>
+            </div>
+        </div>
 
             </div>
         </div>
@@ -109,56 +134,49 @@
         <div class="container py-0 p-5 mb-5">
             <div class="row text-center g-4">
 
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-person-square"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-dark">etc etc</a>
-                        </div>
+              <div class="col-md">
+                <div class="card tipo1
+                ">
+                    <div class="card-body text-center">
+                        <h3 class="card-title mb-3">Gerbera</h3>
+                        <div class="h1 mb-3 ">
+                            <img src="img/poppy-svgrepo-com (1).svg" class="text-center w-50 mt-0 " alt="...">
+                          </div>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            At veniam voluptas provident rem sequi? Ab?</p>
+                            <a href="venta.html" class="btn">Comprar</a>
                     </div>
                 </div>
+            </div>
+            <div class="col-md">
+              <div class="card tipo1
+              ">
+                  <div class="card-body text-center">
+                      <h3 class="card-title mb-3">Aspidistra</h3>
+                      <div class="h1 mb-3 ">
+                          <img src="img/plant-svgrepo-com (3).svg" class="text-center w-50 mt-0 " alt="...">
+                        </div>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                          At veniam voluptas provident rem sequi? Ab?</p>
+                          <a href="venta.html" class="btn">Comprar</a>
+                  </div>
+              </div>
+          </div>
 
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-person-square"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-dark">etc etc</a>
-                        </div>
-                    </div>
+          <div class="col-md">
+            <div class="card tipo1
+            ">
+                <div class="card-body text-center">
+                    <h3 class="card-title mb-3">Lophophora diffusa</h3>
+                    <div class="h1 mb-3 ">
+                        <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                      </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        At veniam voluptas provident rem sequi? Ab?</p>
+                    <a href="venta.html" class="btn">Comprar</a>
                 </div>
-
-                <div class="col-md">
-                    <div class="card btn text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <i class="bi bi-person-square"></i>
-                            </div>
-                            <h3 class="card-title mb-3">stuff 2</h3>
-                            <div class="h1 mb-3 ">
-                                <img src="img/cactus-furniture-nature-7-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                              </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="#" class="btn btn-dark">etc etc</a>
-                        </div>
-                    </div>
-                </div>
+            </div>
+        </div>
 
             </div>
         </div>
