--- a/home.html
+++ b/home.html
@@ -37,14 +37,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-          <li class="nav-item btn">
+          <li class="nav-item ">
+          <li class="nav-item btn  ">
             <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
-            <a class="nav-link" href="catalogo.html">Catalogo</a>
+            <a class="nav-link stretched-link" href="catalogo.html ">Catalogo</a>
           </li>
           </li>
           <div class="d-flex flex-column">
-            <li class="nav-item btn btn2">
+            <li class="nav-item btn tipo1">
               <a class="nav-link" href="registro.html">Registrate </a>
             </li>
             <li class="nav-item dropdown">
@@ -111,7 +111,7 @@
                         <h1>Sahuaro</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores optio, nulla reiciendis
                           veniam quisquam voluptatum est illo delectus ducimus ullam?</p> <br>
-                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
+                        <a href="producto.html" class="btn tipo1 d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
@@ -136,7 +136,7 @@
                         </div>
                         <h1>astrophytum myriostigma </h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p> <br>
-                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
+                        <a href="producto.html" class="btn tipo1 d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
@@ -162,7 +162,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, doloribus ullam quas quis
                           repellendus provident in neque nam id mollitia hic odit consectetur adipisci doloremque
                           ratione perspiciatis, dignissimos veritatis. Voluptatum.</p> <br>
-                        <a href="producto.html" class="btn d-block p-2 m-5 mx-auto">Mas informacion</a>
+                        <a href="producto.html" class="btn tipo1 d-block p-2 m-5 mx-auto">Mas informacion</a>
                       </div>
                     </div>
                   </div>
