--- a/producto.html
+++ b/producto.html
@@ -18,9 +18,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light ">
-
     <div class="container-fluid p-3 py-0">
-
       <div class="d-flex flex-column">
         <li class="nav-item ">
           <a class="navbar-brand mt-0" href="home.html">
@@ -44,12 +42,12 @@
           <li class="nav-item">
           <li class="nav-item btn">
             <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
-            <a class="nav-link" href="catalogo.html">Catalogo</a>
+            <a class="nav-link stretched-link" href="catalogo.html ">Catalogo</a>
           </li>
           
           </li>
           <div class="d-flex flex-column">
-            <li class="nav-item btn btn2">
+            <li class="nav-item btn tipo1">
               <a class="nav-link" href="registro.html">Registrate </a>
             </li>
             <li class="nav-item dropdown">
@@ -86,7 +84,7 @@
         <div class="card-body mb-5 ">
           <div class=" h1 mb-3 ">
             <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-50 mx-auto my-auto d-block" 
-            style="border: 1px solid rgba(0, 0, 0, 0.51); background-color: rgba(43, 67, 19, 0.132); border-radius: 2%;" alt="...">
+            style="border: 1px solid rgba(0, 0, 0, 0.51); background-color: rgba(43, 67, 19, 0.132); border-radius: 2%;">
             <div class="text-center">
               <a href="venta.html" class="btn tipo1" style="width:50% ;border-color: black; color:black">Pedir</a>
             </div>
