--- a/catalogo.html
+++ b/catalogo.html
@@ -42,12 +42,11 @@
           <li class="nav-item">
           <li class="nav-item btn">
             <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
-            <a class="nav-link" href="catalogo.html">Catalogo</a>
+            <a class="nav-link stretched-link" href="catalogo.html ">Catalogo</a>
           </li>
           </li>
           <div class="d-flex flex-column">
-            <li class="nav-item btn tipo1
-            ">
+            <li class="nav-item btn tipo1">
               <a class="nav-link" href="registro.html">Registrate </a>
             </li>
             <li class="nav-item dropdown">
@@ -90,27 +89,32 @@
                         <h3 class="card-title mb-3">Sahuaro</h3>
                         <div class="h1 mb-3 ">
                             <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                            <a href="producto.html" class="stretched-link"></a>
                           </div>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="venta.html" class="btn">Comprar</a>
                     </div>
+                </div>
+                <div class="text-center mt-1">
+                  <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
                 </div>
             </div>
 
             <div class="col-md">
-              <div class="card tipo1
-              ">
+              <div class="card tipo1">
                   <div class="card-body text-center">
                       <h3 class="card-title mb-3">Gymnocalycium</h3>
                       <div class="h1 mb-3 ">
-                          <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 " alt="...">
+                          <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 ">
+                          <a href="producto.html" class="stretched-link"></a>
                         </div>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                           At veniam voluptas provident rem sequi? Ab?</p>
-                          <a href="venta.html" class="btn">Comprar</a>
-                  </div>
-              </div>
+                        </div>
+                      </div>
+                      <div class="text-center mt-1">
+                        <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+                      </div>
           </div>
 
           <div class="col-md">
@@ -120,11 +124,14 @@
                     <h3 class="card-title mb-3">Ficus Lyrata</h3>
                     <div class="h1 mb-3 ">
                         <img src="img/plant-svgrepo-com (7).svg" class="text-center w-50 mt-0 " alt="...">
+                        <a href="producto.html" class="stretched-link"></a>
                       </div>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         At veniam voluptas provident rem sequi? Ab?</p>
-                        <a href="venta.html" class="btn">Comprar</a>
                 </div>
+            </div>
+            <div class="text-center mt-1">
+              <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
             </div>
         </div>
 
@@ -141,11 +148,14 @@
                         <h3 class="card-title mb-3">Gerbera</h3>
                         <div class="h1 mb-3 ">
                             <img src="img/poppy-svgrepo-com (1).svg" class="text-center w-50 mt-0 " alt="...">
+                            <a href="producto.html" class="stretched-link"></a>
                           </div>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             At veniam voluptas provident rem sequi? Ab?</p>
-                            <a href="venta.html" class="btn">Comprar</a>
                     </div>
+                </div>
+                <div class="text-center mt-1">
+                  <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
                 </div>
             </div>
             <div class="col-md">
@@ -155,11 +165,14 @@
                       <h3 class="card-title mb-3">Aspidistra</h3>
                       <div class="h1 mb-3 ">
                           <img src="img/plant-svgrepo-com (3).svg" class="text-center w-50 mt-0 " alt="...">
+                          <a href="producto.html" class="stretched-link"></a>
                         </div>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                           At veniam voluptas provident rem sequi? Ab?</p>
-                          <a href="venta.html" class="btn">Comprar</a>
                   </div>
+              </div>
+              <div class="text-center mt-1">
+                <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
               </div>
           </div>
 
@@ -170,11 +183,14 @@
                     <h3 class="card-title mb-3">Lophophora diffusa</h3>
                     <div class="h1 mb-3 ">
                         <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                        <a href="producto.html" class="stretched-link"></a>
                       </div>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         At veniam voluptas provident rem sequi? Ab?</p>
-                    <a href="venta.html" class="btn">Comprar</a>
                 </div>
+            </div>
+            <div class="text-center mt-1">
+              <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
             </div>
         </div>
 
