--- a/registro.html
+++ b/registro.html
@@ -41,31 +41,31 @@
           <li class=" nav-item btn">
             <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
             <a class="nav-link stretched-link" href="catalogo.html ">Catalogo</a>
-            </li>
+          </li>
           </li>
           <div class="d-flex flex-column">
             <li class="nav-item btn btn2">
               <a class="nav-link" href="registro.html">Registrate </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="dropdown-toggle mx-1 p-1 btn"  href="#" id="navbarDropleft" role="button" data-bs-toggle="dropdown" 
-              aria-expanded="false" style="width:135px">
+              <a class="dropdown-toggle mx-1 p-1 btn" href="#" id="navbarDropleft" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false" style="width:135px">
                 Ingresar
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <div class="col-md-11 p-1">
-                  <input type="text" name="txtCorreo" 
-                  class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-                  maxlength="50" placeholder="Id. Usuario:" 
-                  title="Ingrese su correo electronico/mail">
-              </div>
-              <div class="col-md-11 p-1">
-                <input type="text" name="txtCorreo" 
-                class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-                maxlength="50" placeholder="Contraseña:" 
-                title="Ingrese su correo electronico/mail">
-              </div>
-                <li><hr class="dropdown-divider"></li>
+                  <input type="text" name="txtCorreo" class="txtCorreo form-control"
+                    style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Id. Usuario:"
+                    title="Ingrese su correo electronico/mail">
+                </div>
+                <div class="col-md-11 p-1">
+                  <input type="text" name="txtCorreo" class="txtCorreo form-control"
+                    style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Contraseña:"
+                    title="Ingrese su correo electronico/mail">
+                </div>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item btn offset-2" style="width:90px" href="#">Entrar</a></li>
               </ul>
             </li>
@@ -76,85 +76,80 @@
   </nav>
   <div class="col-md-2 offset-md-2 pb-5">
     <div class="text-center">
-        <h3>Registro clientes</h3>
-    </div>        
-</div>
-
-
-<div class="row mb-2">
-    <div class="col-md-2 offset-md-2">
-        Rut        
+      <h3>Registro clientes</h3>
     </div>
-    <div class="col-10 col-md-5">
-        <input type="text" name="txtRut" 
-        class="txtRut form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-        maxlength="8" placeholder="Ej: 12345678" 
-        title="Ingrese el nro de rut">
-    </div>
-    <div class="col-2 col-md-1">
-        <input type="text" name="txtDv" 
-        class="txtDv form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-        maxlength="1" placeholder="Ej: K" 
-        title="Ingrese el Digito verificador del rut">
-    </div>
-</div>
-<div class="row mb-2">
-    <div class="col-md-2 offset-md-2">
-        Nombre        
-    </div>
-    <div class="col-md-6">
-        <input type="text" name="txtNombre" 
-        class="txtNombre form-control" style="background-color: rgba(121, 210, 69, 0.118);"  
-        maxlength="50" placeholder="Ej: Juan" 
-        title="Ingrese su nombre">
-    </div>
-</div>
-<div class="row mb-2">
-    <div class="col-md-2 offset-md-2">
-        Apellido        
-    </div>
-    <div class="col-md-6">
-        <input type="text" name="txtApellido" 
-        class="txtApellido form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-        maxlength="50" placeholder="Ej: Fernandez" 
-        title="Ingrese su apellido">
-    </div>
-</div>
-<div class="row mb-2">
-  <div class="col-md-2 offset-md-2">
-      Correo electronico        
   </div>
-  <div class="col-md-6">
-      <input type="text" name="txtCorreo" 
-      class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-      maxlength="50" placeholder="Ej: juan_f@**mail.com" 
-      title="Ingrese su correo electronico/mail">
+
+  <div class="mx-5">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-2">
+        Rut
+      </div>
+      <div class="col-10 col-md-5">
+        <input type="text" name="txtRut" class="txtRut form-control"
+          style="background-color: rgba(121, 210, 69, 0.118);" maxlength="8" placeholder="Ej: 12345678"
+          title="Ingrese el nro de rut">
+      </div>
+      <div class="col-2 col-md-1">
+        <input type="text" name="txtDv" class="txtDv form-control" style="background-color: rgba(121, 210, 69, 0.118);"
+          maxlength="1" placeholder="Ej: K" title="Ingrese el Digito verificador del rut">
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-2">
+        Nombre
+      </div>
+      <div class="col-md-6">
+        <input type="text" name="txtNombre" class="txtNombre form-control"
+          style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Ej: Juan"
+          title="Ingrese su nombre">
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-2">
+        Apellido
+      </div>
+      <div class="col-md-6">
+        <input type="text" name="txtApellido" class="txtApellido form-control"
+          style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Ej: Fernandez"
+          title="Ingrese su apellido">
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-2">
+        Correo electronico
+      </div>
+      <div class="col-md-6">
+        <input type="text" name="txtCorreo" class="txtCorreo form-control"
+          style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Ej: juan_f@**mail.com"
+          title="Ingrese su correo electronico/mail">
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-12 col-md-2 offset-md-2">
+        Nacimiento
+      </div>
+      <div class="col-12 col-md-6">
+        <input type="date" name="txtNacimiento" class="txtNacimiento form-control"
+          style="background-color: rgba(121, 210, 69, 0.118);" title="Ingrese la fecha de nacimiento">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2 offset-md-2">
+        Opciones
+      </div>
+      <div class="col-md-6">
+        <input type="submit" name="btnLimpiar" class="btnLimpiar btn btn-outline-secondary float-end tipo1"
+          style="border-color: rgba(48, 83, 8, 0.821);" title="Limpia el formulario de información que este escrita"
+          value="Limpiar">
+        <button type="button" class="btn float-end mx-2 tipo1"
+          style="border-color: rgba(48, 83, 8, 0.821);">Listar</button>
+        <button type="button" class="btn float-end tipo1" style="border-color: rgba(48, 83, 8, 0.821);">Grabar</button>
+      </div>
+    </div>
   </div>
-</div>
-<div class="row mb-2">
-    <div class="col-12 col-md-2 offset-md-2">
-        Nacimiento         
-    </div>
-    <div class="col-12 col-md-6">
-        <input type="date" name="txtNacimiento" 
-        class="txtNacimiento form-control" style="background-color: rgba(121, 210, 69, 0.118);"  
-        title="Ingrese la fecha de nacimiento">
-    </div>
-</div>
-
-<div class="row">
-<div class="col-md-2 offset-md-2">
-  Opciones        
-</div>
-<div class="col-md-6">
-  <input type="submit" name="btnLimpiar" 
-  class="btnLimpiar btn btn-outline-secondary float-end" style="border-color: rgba(48, 83, 8, 0.821);"
-  title="Limpia el formulario de información que este escrita" value="Limpiar">
-  <button type="button" class="btn float-end mx-2" style="border-color: rgba(48, 83, 8, 0.821);">Listar</button>
-  <button type="button" class="btn float-end" style="border-color: rgba(48, 83, 8, 0.821);">Grabar</button>
-</div>
-</div>
-
-</div>
+  </div>
 </body>
+
 </html>
